--- a/Neo4jIdentity/Neo4jIdentity.csproj
+++ b/Neo4jIdentity/Neo4jIdentity.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Guards" Version="2.1.19292.12" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Neo4jClient" Version="3.2.0.1" />
   </ItemGroup>
